8220575: Replace hardcoded 127.0.0.1 in URLs with new URI builder
Reviewed-by: dfuchs, chegar